# torii-usb

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.software  README.md  changelog.html  conf.py  features.html  features.md  genindex.html  getting_started.html  index.html  index.md  install.html  install.md  intro.html  license.html  migration.html  migration.md  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_test.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: changelog.doctree  environment.pickle  features.doctree  getting_started.doctree  index.doctree  install.doctree  intro.doctree  license.doctree  migration.doctree
.doctrees/gateware/: index.doctree
.doctrees/tutorials/: index.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-documentation.yml  3-feature-request.yml  99-other.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yaml  pr.yaml  tests.yaml
_static/: documentation_options.js
contrib/: .flake8
contrib/packaging/: PKGBUILD.in
docs/: conf.py  custom_hardware.rst  features.md  features.rst  getting_started.md  getting_started.rst  index.md  index.rst  install.md  intro.md  intro.rst  license.md  migration.md  requirements.txt
docs/gateware/: endpoint.rst  index.md  usb2_device.rst
docs/tutorials/: index.md
examples/: README.md
examples/phy/: pipe_phy.py  serdes_phy.py
examples/usb/: acm_serial.py  counter_device.py  interrupt_device.py  isochronous_count.py  loopback.py  simple_device.py  stream_out_device.py  stress_test_device.py  vendor_request.py
gateware/: index.html  index.md
gateware/interface/: index.html  index.md  pipe.html  pipe.md  ulpi.html  utmi.html
gateware/stream/: index.html  index.md
gateware/usb/: analyzer.html  index.html  index.md  request.html  request.md  stream.html
latest/: .buildinfo  changelog.html  features.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: changelog.doctree  environment.pickle  features.doctree  getting_started.doctree  index.doctree  install.doctree  intro.doctree  license.doctree  migration.doctree
latest/_static/: documentation_options.js
latest/gateware/: index.html
latest/tutorials/: index.html
main/: .buildinfo  changelog.html  features.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: changelog.doctree  environment.pickle  features.doctree  getting_started.doctree  index.doctree  install.doctree  intro.doctree  license.doctree  migration.doctree
main/gateware/: index.html
main/tutorials/: index.html
sol/: __init__.py  cli.py  full_devices.py  usb2.py  usb3.py
sol/gateware/: memory.py
sol_usb/: __init__.py  full_devices.py  usb2.py  usb3.py
sol_usb/gateware/: memory.py
tests/: test_memory.py  test_stream_generator.py
tests/interface/: test_ulpi.py
torii_usb/: __init__.py  full_devices.py  memory.py  usb2.py  usb3.py
tutorials/: index.html
v0.7.0/: .buildinfo  changelog.html  features.html  genindex.html  getting_started.html  index.html  install.html  intro.html  migration.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.7.1/: .buildinfo  changelog.html  features.html  genindex.html  getting_started.html  index.html  install.html  intro.html  migration.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.8.0/: .buildinfo  CNAME  changelog.html  features.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.8.1/: changelog.html  features.html  genindex.html  getting_started.html  index.html  install.html  intro.html  license.html  migration.html  objects.inv  py-modindex.html  search.html
(+935 files in other folders)
